munin (work)

  * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
  * Main/Node: Added support for TLS.
  * Installation: Make the single python plugin use @@PYTHON@@ again.
  * Plugin: linux/users now has proper hashbang.
  * Plugin: Bugfix in generic/sendmail_mail* autoconf.

munin (1.3.0)

  * Main: Allow dots in PNG paths (patch by Jacques Caruso).
  * Main: Properly size table below graphs in service-view.
  * Main: Fix bug which lead to some graphs failing with STACK error.
  * Main: Added limit message option "strtrunc".
  * Main: "contacts" can now be set to "none".
  * Main: Bugfix with graphs using both "graph_sums" and data aliases.
  * Main: Tables in service-view now sorted according to graph_order.
  * Main: Tables in service-view now containt the correct "Type" when using
    data aliases.
  * Plugins: generic/sendmail_mail{stats,traffic} updated.
  * Plugins: Made generic/samba more portable (fixes by Nicolas Stransky).
  * Plugins: Fixed typo in generic/loggrep breaking implicit labeling.
  * Plugins: Bugfix in generic/amavis.

munin (1.1.9)

  * Main: Optimised munin-cgi-graph a bit.
  * Main: Internal name (for use in munin.conf) added to the table in
    service view.
  * Main: Added option cgiurl_graph.
  * Main: Bugfix when using long labels and CGI graphing.
  * Node: Fix bug when encountering strange environment (Deb#285173).
  * Node: Remove hardcoding of default user/group to run the plugin as
    (SF#1083251).
  * Packaging: Expand man-page macros properly on man-page generation 
    (Deb#286399).
  * Plugin: Added plugin generic/dhcpd3, created by Rune N. Skillingstad.
  * Plugin: Patch generic/bind9 to report "unnamed" as "other" (Nicolas 
    Stransky).
  * Plugin: linux/apt* has been forced to LANG=C, to get predictable output.
  * Plugin: Removed hardcoded host_name in linux/cps_.
  * Plugin: Added plugin linux/users, created by Michael Kaiser.
  * Plugin: Cleaned up generic/samba a bit (SF#1087961).
