@@ -5,6 +5,8 @@ munin (work)
   * Installation: Make the single python plugin use @@PYTHON@@ again.
   * Plugin: linux/users now has proper hashbang.
   * Plugin: Bugfix in generic/sendmail_mail* autoconf.
+  * Plugin: Changed default log for generic/postfix_mailstats from syslog to
+  mail.log. Downgraded it from auto to manual.
 
 munin (1.3.0)
 
